Currently continuing working on showing categories in the ingredients list page. I am trying to figure out how to return only ingredients whos category ID matches one of the IDs in the categoryIdList array (which is an array obtained from the ingredients service that returns a unique list of category IDs). One issue is that Angular can only have one structural directive per DOM element. Angular suggests to wrap an ngfor element with another element using an ngif. Currently, I am trying to create a category property within the ingredient list ts that filters the ingredients property to only include ingredients whos category IDs are included in the categoryIDList array (thus doing the filtering in TS as opposed to finding a way in html), however the filter is not acting as intended and is still supplying the categories property with all of the array items from the ingredients property. I will need to look further into this issue, and possibly continue to explore more options on how to sort the data.

--- a/src/app/modules/ingredient-list/ingredient-list.component.scss
+++ b/src/app/modules/ingredient-list/ingredient-list.component.scss
@@ -1,3 +1,3 @@
-// .ingredient-list-nav button.selected {
-//   background-color: green;
-// }
+.ingredient-list-nav button.selected {
+  background-color: green;
+}
